fix : post term alignment issue

--- a/sass/editor.scss
+++ b/sass/editor.scss
@@ -121,7 +121,8 @@
 		color: var(--wp--preset--color--body);
 		background-color: var(--wp--preset--color--outline);
 		margin-right: var(--wp--preset--spacing--xx-small);
-		margin-bottom: var(--wp--preset--spacing--xx-small);
+		margin-top: var(--wp--preset--spacing--xxx-small);
+		margin-bottom: var(--wp--preset--spacing--xxx-small);
 		line-height: var(--wp--custom--line-height--initial);
 	}
 
@@ -140,7 +141,8 @@
 	color: var(--wp--preset--color--body);
 	background-color: var(--wp--preset--color--outline);
 	margin-right: var(--wp--preset--spacing--xx-small);
-	margin-bottom: var(--wp--preset--spacing--xx-small);
+	margin-top: var(--wp--preset--spacing--xxx-small);
+	margin-bottom: var(--wp--preset--spacing--xxx-small);
 	line-height: var(--wp--custom--line-height--initial);
 }
 
@@ -339,6 +341,7 @@
 		color: var(--wp--preset--color--body);
 		background-color: var(--wp--preset--color--outline);
 		margin-right: var(--wp--preset--spacing--xx-small);
+		margin-top: var(--wp--preset--spacing--xxx-small);
 		margin-bottom: var(--wp--preset--spacing--xx-small);
 		line-height: var(--wp--custom--line-height--initial);
 	}
